# terraform-aws-lambda-secrets-manager-tailscale

./: .gitignore  Dockerfile  Makefile  README.md  README.yaml  main.tf  outputs.tf  shell.nix  variables.tf  versions.tf
docs/: terraform.md
examples/simple/: main.tf  outputs.tf  terraform.tfvars.sample  variables.tf
lambda/: .flake8  .gitignore  pyproject.toml
lambda/src/ts_rotate/: common.py  handler.py  tailscale.py
lambda/tests/: test.py  test_common.py  test_handler.py  test_tailscale.py
